public static class Constants
{
    //Anim
    public const string AttackAnim = "attack";
    public const string IdleAnim = "idle";
    public const string DeathAnim = "die";
    public const string RunAnim = "run";
    public const string JumpAnim = "jump";
    public const string FallAnim = "fall";
    public const string ThrowAnim = "throw";

    //Tag
    public const string CoinTag = "Coin";
    public const string PlayerTag = "Player";
    public const string DeathZoneTag = "DeathZone";
    public const string EnemyWallTag = "EnemyWall";
    public const string EnemyTag = "Enemy";

    //PlayerPrefs
    public const string CoinPlayerPrefs = "coin";

}
